Wrap error 500 on wallet service with bad request response Update swagger Code cleanup
